--- a/comnectar/comnectar/pom.xml
+++ b/comnectar/comnectar/pom.xml
@@ -31,7 +31,7 @@
 		<dependency> 
         <groupId>org.hibernate</groupId>
         <artifactId>hibernate-validator</artifactId>
-        <version>6.0.13.Final</version>
+        <version>8.0.0.Alpha2</version>
     </dependency> 
     <dependency> 
         <groupId>org.glassfish</groupId>
@@ -72,10 +72,26 @@
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		 <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-test</artifactId>
+      <scope>test</scope>
+      <exclusions>
+      <exclusion>
+      <groupId>org.junit.vintage</groupId>
+      <artifactId>junit-vintage-engine</artifactId>
+      </exclusion>
+      </exclusions>
+  </dependency>
 	</dependencies>
 
 	<build>
